--- a/extension/details.html
+++ b/extension/details.html
@@ -1,28 +1,24 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="details.css" />
     <script src="details.js" type="text/javascript"></script>  
-    <style>
-      body, h1
-      {
-        font-size: 10pt;
-        font-family: Arial;
-      }
-      h1 { font-size: 12pt; }
-      li { margin: 0px; white-space: nowrap; }
-      ul { list-style-type: none; margin: 0px; padding: 0px; }
-      .colorBox
-      {
-        border: solid 1px black;
-        display: inline-block;
-        width: 12px;
-        height: 12px;
-        margin-right: 8px;
-      }
-    </style>
+    
   </head>
   <body>
-    <p><b>Du ble sk&aring;net for:</b></p>
-    <ul id="list">
-    </ul>
+    <div id="header">
+      <img src="img/1406917218_trash.png" id="logo" />
+      <span id="title">.no Plus Block</span>
+      <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
+    </div>
+    <div id="stats">
+      <p><b>Du ble sk&aring;net for:</b></p>
+      <ul id="list">
+      </ul>
+    </div>
+    <div id="opts">
+      <a href="options.html"><img src="img/settings.png" border="0"> Innstillinger</a><br />
+      <a href="http://twitter.com/sp00x" target="_blank"><img src="img/twitter.png" border="0"> @sp00x</a><br />
+    </div>
   </body>
 </html>
