--- a/extension/details.html
+++ b/extension/details.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="details.css" />
+    <link rel="stylesheet" type="text/css" href="common.css" />
     <script src="details.js" type="text/javascript"></script>  
-    
+    <style>
+      body { min-width: 200px;}
+    </style>
   </head>
   <body>
     <div id="header">
-      <img src="img/1406917218_trash.png" id="logo" />
+      <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
       <span id="title">.no Plus Block</span>
       <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
     </div>
@@ -17,8 +19,8 @@
       </ul>
     </div>
     <div id="opts">
-      <a href="options.html"><img src="img/settings.png" border="0"> Innstillinger</a><br />
-      <a href="http://twitter.com/sp00x" target="_blank"><img src="img/twitter.png" border="0"> @sp00x</a><br />
+      <a href="options.html" class="optsImage"><img src="img/settings.png" border="0" class="optsImage"> Innstillinger</a><br />
+      <a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage"> @sp00x</a><br />
     </div>
   </body>
 </html>
