--- a/extension/options.html
+++ b/extension/options.html
@@ -9,42 +9,55 @@
     -->
     <script src="site_rules.js" type="text/javascript"></script> 
     <script src="options.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="options.css" />
+    <link rel="stylesheet" type="text/css" href="common.css" />
+    <style>
+      body { min-width: 600px;}
+    </style>
   </head>
   <body ng-controller="OptionsController as o">
 
-    <h2>Nettsteder</h2>
+    <div id="header">
+      <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
+      <span id="title">.no Plus Block</span>
+      <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
+      <span id="headExtra">
+        AngularJS - <a href="https://angularjs.org/">https://angularjs.org/</a> (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>)<br />
+        Icon - <a href="http://ionicons.com/" target="_blank">http://ionicons.com/</a> (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>) 
+        <!--
+        <a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage"> @sp00x</a>
+        -->
+      </span>
+    </div>
 
-    <span ng-repeat="site in siteRules | sort:'title'">
-      <h3>{{site.title}}</h3>
-      <label class="contentTypeFilter" ng-repeat="cg in site.contentGroups | sort:'title'">
-        <input type="checkbox" ng-model="cg.enabled"> {{cg.title}}
+    <div id="content">
+
+      <h2>Nettsteder</h2>
+
+      <span ng-repeat="site in siteRules | sort:'title'">
+        <h3>{{site.title}}</h3>
+        <label class="contentTypeFilter" ng-repeat="cg in site.contentGroups | sort:'title'">
+          <input type="checkbox" ng-model="cg.enabled"> {{cg.title}}
+        </label>
+      </span>
+
+      <h2>Innstillinger</h2>
+
+      <h3>Erstatt med..</h3>
+
+      <label ng-repeat="repl in replacements">
+        <input type="radio" name="replaceWith" value="{{repl.id}}" ng-model="options.replaceWith"> {{repl.title}}
       </label>
-    </span>
 
-    <h2>Innstillinger</h2>
+      <p>
+        <input type="button" id="saveButton" ng-click="save()" value="Lagre" />
+        <input type="button" id="resetSiteRulesButton" ng-click="resetSiteRules()" value="Nullstill" />
+      </p>
 
-    <h3>Erstatt med..</h3>
+      <span ng-show="saved" id="saved">
+        Innstillingene er lagret!
+      </span>
 
-    <label ng-repeat="repl in replacements">
-      <input type="radio" name="replaceWith" value="{{repl.id}}" ng-model="options.replaceWith"> {{repl.title}}
-    </label>
+    </div>
 
-    <p>
-      <input type="button" id="saveButton" ng-click="save()" value="Lagre" />
-      <input type="button" id="resetSiteRulesButton" ng-click="resetSiteRules()" value="RST" />
-    </p>
-
-    <span ng-show="saved" id="saved">
-      Innstillingene er lagret!
-    </span>
-
-<!--
-    <h2>Debug</h2>
-    <h3>options</h3>
-    {{options}}
-    <h3>siteRules</h3>
-    {{siteRules}}
--->
   </body>
 </html>
