added tv2 & placeholders, fixed bugs, added about box

--- a/extension/details.html
+++ b/extension/details.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="common.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="details.js" type="text/javascript"></script>  
     <style>
       body { min-width: 200px;}
@@ -20,7 +21,7 @@
     </div>
     <div id="opts">
       <a href="options.html" class="optsImage"><img src="img/settings.png" border="0" class="optsImage"> Innstillinger</a><br />
-      <a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage"> @sp00x</a><br />
+      <a href="about.html" class="optsImage"><img src="img/information.png" border="0" class="optsImage"> Om programmet</a><br />
     </div>
   </body>
 </html>
