--- a/extension/options.html
+++ b/extension/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="optionsApp" ng-csp>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="lib/angular.min.js" type="text/javascript"></script>    
     <link rel="stylesheet" type="text/css" href="lib/angular-csp.css" />
     <!--
@@ -20,13 +21,7 @@
       <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
       <span id="title">.no Plus Block</span>
       <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
-      <span id="headExtra">
-        AngularJS - <a href="https://angularjs.org/">https://angularjs.org/</a> (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>)<br />
-        Icon - <a href="http://ionicons.com/" target="_blank">http://ionicons.com/</a> (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT</a>) 
-        <!--
-        <a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage"> @sp00x</a>
-        -->
-      </span>
+      <span id="headExtra"></span>
     </div>
 
     <div id="content">
