configurable css image filters, tabs in options

--- a/extension/details.html
+++ b/extension/details.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="common.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <script src="common.js" type="text/javascript"></script>
     <script src="details.js" type="text/javascript"></script>  
     <style>
       body { min-width: 200px;}
@@ -20,7 +21,7 @@
       </ul>
     </div>
     <div id="opts">
-      <a href="options.html" class="optsImage"><img src="img/settings.png" border="0" class="optsImage"> Innstillinger</a><br />
+      <a href="options.html" class="optsImage" target="_blank"><img src="img/settings.png" border="0" class="optsImage"> Innstillinger</a><br />
       <a href="about.html" class="optsImage"><img src="img/information.png" border="0" class="optsImage"> Om programmet</a><br />
     </div>
   </body>
