--- a/extension/about.html
+++ b/extension/about.html
@@ -2,7 +2,7 @@
 <html ng-app="optionsApp" ng-csp>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="site_rules.js" type="text/javascript"></script> 
+    <script src="common.js" type="text/javascript"></script> 
     <script src="options.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
     <style>
