--- a/extension/about.html
+++ b/extension/about.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html ng-app="optionsApp" ng-csp>
+<html ng-app="aboutApp" ng-csp>
+
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- angular -->
+    <script src="lib/angular.min.js" type="text/javascript"></script>    
+    <link rel="stylesheet" type="text/css" href="lib/angular-csp.css" />
+    <!--
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-csp.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js" type="text/javascript"></script>
+    -->
     <script src="common.js" type="text/javascript"></script> 
-    <script src="options.js" type="text/javascript"></script>
+    <script src="about.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
     <style>
       body { min-width: 300px;}
     </style>
   </head>
-  <body ng-controller="OptionsController as o">
 
-    <div id="header">
-      <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
-      <span id="title">.no Plus Block</span>
-      <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
-    </div>
+  <body>
+
+    <ng-include src="'partials/header.html'"></ng-include>
 
     <div id="content">
 
@@ -23,7 +28,7 @@
 
       <p>Kildekoden er tilgjengelig på <img src="img/GitHub-Mark-32px.png" class="optsImage"> GitHub: <a target="_blank" href="https://github.com/sp00x/chrome-no-plus-block">https://github.com/sp00x/chrome-no-plus-block</a></p>
 
-      <p>Innstillinger-dialogen benytter seg av <b>AngularJS</b> (<a href="https://angularjs.org/">https://angularjs.org/</a>, <a href="http://opensource.org/licenses/MIT" target="_blank">MIT lisens</a>)</p>
+      <p>Benytter seg av <b>AngularJS</b>-rammeverket (<a href="https://angularjs.org/">https://angularjs.org/</a>, <a href="http://opensource.org/licenses/MIT" target="_blank">MIT lisens</a>)</p>
       <p>S&oslash;ppelb&oslash;tte-figuren er laget av <b>IonIcons</b> (<a href="http://ionicons.com/" target="_blank">http://ionicons.com/</a>, <a href="http://opensource.org/licenses/MIT" target="_blank">MIT lisens</a>)</p>
 
     </div>
