--- a/extension/options.html
+++ b/extension/options.html
@@ -2,10 +2,11 @@
 <html ng-app="optionsApp" ng-csp>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="lib/angular.min.js" type="text/javascript"></script>    
-    <link rel="stylesheet" type="text/css" href="lib/angular-csp.css" />
     <link rel="stylesheet" type="text/css" href="common.css" />
     <link rel="stylesheet" type="text/css" href="tabs.css" />
+    <!-- angular -->
+    <script src="lib/angular.min.js" type="text/javascript"></script>    
+    <link rel="stylesheet" type="text/css" href="lib/angular-csp.css" />
     <!--
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-csp.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js" type="text/javascript"></script>
@@ -18,12 +19,7 @@
   </head>
   <body ng-controller="OptionsController as o">
 
-    <div id="header">
-      <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
-      <span id="title">.no Plus Block</span>
-      <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
-      <span id="headExtra"></span>
-    </div>
+    <ng-include src="'partials/header.html'"></ng-include>
 
     <div id="content">
 
