--- a/extension/about.html
+++ b/extension/about.html
@@ -3,13 +3,8 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <!-- angular -->
-    <script src="lib/angular.min.js" type="text/javascript"></script>    
-    <link rel="stylesheet" type="text/css" href="lib/angular-csp.css" />
-    <!--
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-csp.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js" type="text/javascript"></script>
-    -->
+    <script src="lib/js/angular.min.js" type="text/javascript"></script>    
+    <link rel="stylesheet" type="text/css" href="lib/css/angular-csp.css" />
     <script src="common.js" type="text/javascript"></script> 
     <script src="about.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="common.css" />
@@ -24,12 +19,15 @@
 
     <div id="content">
 
-      <p>Utviklet av <b>Rune Bjerke</b> (<a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage">@sp00x</a>)</p>
+      <p>Developed by Rune Bjerke (<a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage">@sp00x</a>)</p>
 
-      <p>Kildekoden er tilgjengelig på <img src="img/GitHub-Mark-32px.png" class="optsImage"> GitHub: <a target="_blank" href="https://github.com/sp00x/chrome-no-plus-block">https://github.com/sp00x/chrome-no-plus-block</a></p>
+      <p>Source code is available at <!--<img src="img/GitHub-Mark-32px.png" class="optsImage">GitHub--> <a target="_blank" href="https://github.com/sp00x/chrome-no-plus-block">https://github.com/sp00x/chrome-no-plus-block</a></p>
 
-      <p>Benytter seg av <b>AngularJS</b>-rammeverket (<a href="https://angularjs.org/">https://angularjs.org/</a>, <a href="http://opensource.org/licenses/MIT" target="_blank">MIT lisens</a>)</p>
-      <p>S&oslash;ppelb&oslash;tte-figuren er laget av <b>IonIcons</b> (<a href="http://ionicons.com/" target="_blank">http://ionicons.com/</a>, <a href="http://opensource.org/licenses/MIT" target="_blank">MIT lisens</a>)</p>
+      <p>Uses <a href="https://angularjs.org/">AngularJS</a> by Google (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT license</a>)</p>
+
+      <p>Icon by <a href="http://ionicons.com/" target="_blank">IonIcons</a> (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT license</a>)</p>
+
+      <p><a href="http://fontawesome.io" target="_blank">Font Awesome</a> by Dave Gandy</a></p>
 
     </div>
 
