--- a/extension/details.html
+++ b/extension/details.html
@@ -6,23 +6,23 @@
     <script src="common.js" type="text/javascript"></script>
     <script src="details.js" type="text/javascript"></script>  
     <style>
-      body { min-width: 200px;}
+      body { min-width: 300px;}
     </style>
   </head>
   <body>
     <div id="header">
       <img src="img/1406922645_icon-ios7-trash-outline.png" id="logo" />
-      <span id="title">.no Plus Block</span>
-      <span id="subtitle">Blokk&eacute;r VG+, DB+ og annet tull og v&aring;s!</span>
+      <span id="title">Article category blocker</span>
+      <span id="subtitle">Block front page articles by category type</span>
     </div>
     <div id="stats">
-      <p><b>Du ble sk&aring;net for:</b></p>
+      <p><b>Blocked articles, by category:</b></p>
       <ul id="list">
       </ul>
     </div>
     <div id="opts">
-      <a href="options.html" class="optsImage" target="_blank"><img src="img/settings.png" border="0" class="optsImage"> Innstillinger</a><br />
-      <a href="about.html" class="optsImage"><img src="img/information.png" border="0" class="optsImage"> Om programmet</a><br />
+      <a href="options.html" class="optsImage" target="_blank"><img src="img/settings.png" border="0" class="optsImage"> Options</a><br />
+      <a href="about.html" class="optsImage"><img src="img/information.png" border="0" class="optsImage"> About</a><br />
     </div>
   </body>
 </html>
