--- a/extension/about.html
+++ b/extension/about.html
@@ -4,6 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="lib/js/angular.min.js" type="text/javascript"></script>    
+    <link rel="stylesheet" type="text/css" href="lib/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="lib/css/angular-csp.css" />
     <script src="common.js" type="text/javascript"></script> 
     <script src="about.js" type="text/javascript"></script>
@@ -19,9 +20,9 @@
 
     <div id="content">
 
-      <p>Developed by Rune Bjerke (<a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><img src="img/twitter.png" border="0" class="optsImage">@sp00x</a>)</p>
+      <p>Developed by Rune Bjerke (<a href="http://twitter.com/sp00x" target="_blank" class="optsImage"><i class="fa fa-twitter"></i>@sp00x</a>)</p>
 
-      <p>Source code is available at <!--<img src="img/GitHub-Mark-32px.png" class="optsImage">GitHub--> <a target="_blank" href="https://github.com/sp00x/chrome-no-plus-block">https://github.com/sp00x/chrome-no-plus-block</a></p>
+      <p>Source code is available at <a target="_blank" href="https://github.com/sp00x/chrome-no-plus-block">https://github.com/sp00x/chrome-no-plus-block</a></p>
 
       <p>Uses <a href="https://angularjs.org/">AngularJS</a> by Google (<a href="http://opensource.org/licenses/MIT" target="_blank">MIT license</a>)</p>
 
