context menu/assistant, tutorial, misc experimental

--- a/extension/details.html
+++ b/extension/details.html
@@ -18,7 +18,7 @@
 
     <div id="stats" ng-controller="DetailsController">
       <p>
-        <b>Blocked articles, by category:</b>
+        <b id="blockedHeader">Blocked articles, by category:</b>
       </p>
       <ul id="list" ng-hide="count == 0">
         <li ng-repeat="g in stats">
