--- a/extension/options.html
+++ b/extension/options.html
@@ -180,7 +180,10 @@
             <p>
               <a ng-click="addSite()"><i class="fa fa-plus-circle"></i> Add site..</a><br />
               <a ng-click="import()"><i class="fa fa-sign-in"></i> Import..</a><br />
-              
+            </p>
+
+            <p>
+              For help on how to add a site, please check this <a target="_blank" href="tutorial.html">tutorial</a> (opens in new tab).
             </p>
 
           </div>
