--- a/extension/assistant.html
+++ b/extension/assistant.html
@@ -7,18 +7,26 @@
     <link rel="stylesheet" type="text/css" href="lib/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="lib/css/angular-csp.css" />
     <script src="common.js" type="text/javascript"></script> 
-    <script src="assistant.js" type="text/javascript"></script>
+    <script src="assistant.js" type="text/javascript"></script>    
     <link rel="stylesheet" type="text/css" href="common.css" />
     <style>
-      body { min-width: 500px;}
+      body { min-width: 500px; width: 100%; }
     </style>
   </head>
 
   <body ng-controller="AssistantController">
 
-    <ng-include src="'partials/header.html'"></ng-include>
+    <div id="resizerTop"></div>
+
+    <!-- <ng-include src="'partials/header.html'"></ng-include> -->
 
     <div id="content">
+
+<div ng-show="mode == 'collect'">
+  Collecting links.. When done, <a href="#" ng-click="analyze()">click here!</a>
+</div>
+
+<div ng-hide="mode == 'collect'">
 
       <h3>Candidate CSS selectors</h3>
 
@@ -79,6 +87,7 @@
 	    <label>Path</label>
 	    <input type="text" ng-model="path" />
 -->
+</div>
 
 	</div>
 
